initial commit with section comments

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML practice</title>
-</head>
-<body>
-  <main>this is main</main>
-  <section>this is a section 1</section>
-</body>
+  </head>
+  <body>
+    <main>this is main</main>
+    <section>this is a section 1</section>
+    <!--  this is a comment -->
+  </body>
 </html>
